--- a/Source/Topshelf.Quartz.Ninject.Tests/packages.config
+++ b/Source/Topshelf.Quartz.Ninject.Tests/packages.config
@@ -2,6 +2,7 @@
 <packages>
   <package id="Ninject" version="3.3.4" targetFramework="net461" />
   <package id="NUnit" version="3.12.0" targetFramework="net461" />
+  <package id="NUnit3TestAdapter" version="3.15.1" targetFramework="net461" />
   <package id="Quartz" version="3.0.7" targetFramework="net461" />
   <package id="Topshelf" version="4.2.1" targetFramework="net461" />
 </packages>
