--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,10 @@ steps:
 - task: MSBuild@1
   inputs:
     solution: '**/*.sln'
+- task: ResharperCli@2
+  inputs:
+    solutionOrProjectPath: '**/*.sln'
+    failBuildLevelSelector: 'Warning'
 - task: VSTest@2
   inputs:
     testSelector: 'testAssemblies'
@@ -30,5 +34,5 @@ steps:
   inputs:
     command: 'pack'
     packagesToPack: '**/*.nuspec'
-    versioningScheme: 'byBuildNumber'
+    versioningScheme: 'off'
     includeSymbols: true
