--- a/Source/Topshelf.Ninject/Topshelf.Ninject.nuspec
+++ b/Source/Topshelf.Ninject/Topshelf.Ninject.nuspec
@@ -2,20 +2,18 @@
 <package >
   <metadata>
     <id>Topshelf.Ninject</id>
-    <version>0.4.0.0</version>
+    <version>0.5.0.0</version>
     <title>Topshelf.Ninject</title>
-    <authors>Mark Huber</authors>
-    <owners>Dealertrack Interactive</owners>
-    <licenseUrl>https://github.com/dtinteractive/Topshelf.Integrations/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://www.github.com/dtinteractive/Topshelf.Integrations/</projectUrl>
+    <authors>Alberto Baron</authors>
+    <owners>bertuko</owners>
+    <licenseUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Topshelf.Ninject provides extensions to construct your service class from your Ninject IoC container.</description>
-    <releaseNotes>0.4.0 - Updated dependencies on TopShelf and Ninject</releaseNotes>
-    <copyright>Copyright Dealertrack Interactive 2015</copyright>
     <tags>Topshelf Ninject</tags>
     <dependencies>
-      <dependency id="Ninject" version="3.2.2.0" />
-      <dependency id="TopShelf" version="3.2.0" />
+      <dependency id="Ninject" version="3.3.0" />
+      <dependency id="TopShelf" version="4.0.0" />
     </dependencies>
   </metadata>
   <files>
