--- a/Source/Topshelf.Quartz.Ninject/Topshelf.Quartz.Ninject.nuspec
+++ b/Source/Topshelf.Quartz.Ninject/Topshelf.Quartz.Ninject.nuspec
@@ -2,26 +2,21 @@
 <package >
   <metadata>
     <id>Topshelf.Quartz.Ninject</id>
-    <version>0.4.0.0</version>
+    <version>0.5.0.0</version>
     <title>Topshelf.Quartz.Ninject</title>
-    <authors>Mark Huber</authors>
-    <owners>Dealertrack Interactive</owners>
-    <licenseUrl>https://github.com/dtinteractive/Topshelf.Integrations/blob/master/LICENSE</licenseUrl>
-    <projectUrl>https://www.github.com/dtinteractive/Topshelf.Integrations/</projectUrl>
+    <authors>Alberto Baron</authors>
+    <owners>bertuko</owners>
+    <licenseUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject/blob/master/LICENSE</licenseUrl>
+    <projectUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Topshelf.Quartz.Ninject provides extensions to Topshelf.Quartz allowing you to schedule jobs, built from your Ninject IoC Container, with your service class.</description>
-    <releaseNotes>
-      0.4.0 - Updated Quartz, Ninject, and Topshelf Dependencies. Fixed missing dependnency on Ninject.Extensions.Quartz
-    </releaseNotes>
-    <copyright>Copyright Dealertrack Interactive 2015</copyright>
     <tags>Topshelf Quartz Ninject</tags>
     <dependencies>
-      <dependency id="Common.Logging" version="3.1.0" />
-      <dependency id="Common.Logging.Core" version="3.1.0" />
-      <dependency id="Ninject" version="3.2.2.0" />
-      <dependency id="Ninject.Extensions.Quartz" version="0.3.0.0" />
-      <dependency id="Quartz" version="2.3.2" />
-      <dependency id="Topshelf" version="3.2.0" />
+      <dependency id="Ninject" version="3.3.0" />
+      <dependency id="Quartz" version="3.0.0" />
+      <dependency id="Topshelf" version="4.0.0" />
+      <dependency id="Topshelf.Ninject" version="5.0.0" />
+      <dependency id="Topshelf.Quartz" version="5.0.0" />
     </dependencies>
   </metadata>
   <files>
