--- a/Source/Topshelf.Ninject/Topshelf.Ninject.nuspec
+++ b/Source/Topshelf.Ninject/Topshelf.Ninject.nuspec
@@ -17,6 +17,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\**\Topshelf.Ninject.dll" target="lib" />
+    <file src="bin\Release\Topshelf.Ninject.dll" target="lib" />
   </files>
 </package>
