--- a/Source/Topshelf.Quartz.Ninject/Topshelf.Quartz.Ninject.nuspec
+++ b/Source/Topshelf.Quartz.Ninject/Topshelf.Quartz.Ninject.nuspec
@@ -20,6 +20,6 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\**\Topshelf.Quartz.Ninject.dll" target="lib" />
+    <file src="bin\Release\Topshelf.Quartz.Ninject.dll" target="lib" />
   </files>
 </package>
