--- a/Source/Topshelf.Quartz/Topshelf.Quartz.nuspec
+++ b/Source/Topshelf.Quartz/Topshelf.Quartz.nuspec
@@ -10,12 +10,13 @@
     <projectUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Topshelf.Quartz provides extensions to schedule Quartz jobs along with your service class.</description>
+    <tags>Topshelf Quartz</tags>
     <dependencies>
       <dependency id="Quartz" version="3.0.0" />
       <dependency id="TopShelf" version="4.0.0" />
     </dependencies>
   </metadata>
   <files>
-    <file src="bin\Release\**\Topshelf.Quartz.dll" target="lib" />
+    <file src="bin\Release\Topshelf.Quartz.dll" target="lib" />
   </files>
 </package>
