Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,7 +18,11 @@ steps:
 - task: MSBuild@1
   inputs:
     solution: '**/*.sln'
+- task: MSBuild@1
+  inputs:
+    solution: '**/*.sln'
     platform: 'AnyCPU'
+    configuration: 'Release'
     configuration: 'Release'
 - task: ResharperCli@2
   inputs:
