--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,7 +40,7 @@ steps:
 - task: NuGetCommand@2
   inputs:
     command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Topshelf.*.nupkg;!$(Build.ArtifactStagingDirectory)/**/Topshelf.*.symbols.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: '000e943d-e1f7-4080-b5a0-ab69ef23fe5c/a848ec3b-3b89-4121-a457-fb5d4fc3807d'
     allowPackageConflicts: true
