--- a/Source/Topshelf.Ninject/Topshelf.Ninject.nuspec
+++ b/Source/Topshelf.Ninject/Topshelf.Ninject.nuspec
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package >
   <metadata>
-    <id>Topshelf.Ninject</id>
+    <id>Topshelf.Ninject.Integration</id>
     <version>0.5.0.0</version>
-    <title>Topshelf.Ninject</title>
+    <title>Topshelf.Ninject.Integration</title>
     <authors>Alberto Baron</authors>
     <owners>bertuko</owners>
     <licenseUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject/blob/master/LICENSE</licenseUrl>
     <projectUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Topshelf.Ninject provides extensions to construct your service class from your Ninject IoC container.</description>
+    <description>Topshelf.Ninject.Integration provides extensions to construct your service class from your Ninject IoC container.</description>
     <tags>Topshelf Ninject</tags>
     <dependencies>
       <dependency id="Ninject" version="3.3.0" />
