--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -10,10 +10,13 @@ pool:
   vmImage: 'windows-latest'
 
 steps:
-- task: MSBuild@1
+
+- task: DotNetCoreCLI@2
   inputs:
-    solution: '**/*.sln'
+    command: 'build'
+    packagesToPack: '**/*.csproj'
     configuration: 'Release'
+    versioningScheme: 'off'
 - task: ResharperCli@2
   inputs:
     solutionOrProjectPath: './Topshelf.Integrations.sln'
@@ -26,16 +29,16 @@ steps:
       !**\*TestAdapter.dll
       !**\obj\**
     searchFolder: '$(System.DefaultWorkingDirectory)'
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'pack'
     packagesToPack: '**/*.csproj;-:**/*.Tests.csproj'
+    configuration: 'Release'
+    includesymbols: true
     versioningScheme: 'off'
-    includeSymbols: true
-- task: NuGetCommand@2
+- task: DotNetCoreCLI@2
   inputs:
     command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Topshelf.*.nupkg;!$(Build.ArtifactStagingDirectory)/**/Topshelf.*.symbols.nupkg'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/*.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: '000e943d-e1f7-4080-b5a0-ab69ef23fe5c/a848ec3b-3b89-4121-a457-fb5d4fc3807d'
-    allowPackageConflicts: true
