--- a/Source/Topshelf.Quartz.Ninject.Tests/Topshelf.Quartz.Ninject.Tests.csproj
+++ b/Source/Topshelf.Quartz.Ninject.Tests/Topshelf.Quartz.Ninject.Tests.csproj
@@ -7,6 +7,7 @@
     <Product>Topshelf.Quartz.Ninject.Tests</Product>
     <Copyright>Copyright © Microsoft 2015</Copyright>
     <OutputPath>bin\$(Configuration)\</OutputPath>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
