--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,9 +13,10 @@ steps:
 
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'build'
+    command: 'pack'
     packagesToPack: '**/*.csproj'
     configuration: 'Release'
+    includesymbols: true
     versioningScheme: 'off'
 - task: ResharperCli@2
   inputs:
@@ -31,14 +32,7 @@ steps:
     searchFolder: '$(System.DefaultWorkingDirectory)'
 - task: DotNetCoreCLI@2
   inputs:
-    command: 'pack'
-    packagesToPack: '**/*.csproj;-:**/*.Tests.csproj'
-    configuration: 'Release'
-    includesymbols: true
-    versioningScheme: 'off'
-- task: DotNetCoreCLI@2
-  inputs:
     command: 'push'
-    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Topshelf.*.nupkg;$(Build.ArtifactStagingDirectory)/**/Topshelf.*.symbols.nupkg;-:$(Build.ArtifactStagingDirectory)/**/*.Tests.nupkg;-:$(Build.ArtifactStagingDirectory)/**/*.Tests.symbols.nupkg'
+    packagesToPush: '$(Build.ArtifactStagingDirectory)/**/Topshelf.*.nupkg;$(Build.ArtifactStagingDirectory)/**/Topshelf.*.symbols.nupkg'
     nuGetFeedType: 'internal'
     publishVstsFeed: '000e943d-e1f7-4080-b5a0-ab69ef23fe5c/a848ec3b-3b89-4121-a457-fb5d4fc3807d'
