Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -36,4 +36,4 @@ steps:
     command: 'push'
     packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg'
     nuGetFeedType: 'internal'
-    publishVstsFeed: '19f315e3-f99f-46a3-afc7-298379c7cff4'
+    publishVstsFeed: '000e943d-e1f7-4080-b5a0-ab69ef23fe5c/19f315e3-f99f-46a3-afc7-298379c7cff4'
