--- a/Source/Topshelf.Quartz.Extensions.Tests/Topshelf.Quartz.Extensions.Tests.csproj
+++ b/Source/Topshelf.Quartz.Extensions.Tests/Topshelf.Quartz.Extensions.Tests.csproj
@@ -1,21 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
-    <TargetFrameworks>net452;netstandard2.0</TargetFrameworks>
+    <TargetFrameworks>net452;netcoreapp2.1</TargetFrameworks>
     <SolutionDir Condition="$(SolutionDir) == '' Or $(SolutionDir) == '*Undefined*'">..\..\</SolutionDir>
-    <AssemblyTitle>Topshelf.Quartz</AssemblyTitle>
-    <Product>Topshelf.Quartz</Product>
-    <Description>Topshelf.Quartz.Integration provides extensions to schedule Quartz jobs along with your service class.</Description>
-    <Copyright>Copyright © 2019</Copyright>
-    <Version>5.0.5</Version>
+    <AssemblyTitle>Topshelf.Quartz.Extensions.Tests</AssemblyTitle>
+    <Company>Microsoft</Company>
+    <Product>Topshelf.Quartz.Extensions.Tests</Product>
+    <Copyright>Copyright © Microsoft 2015</Copyright>
     <OutputPath>bin\$(Configuration)\</OutputPath>
-    <Authors>Alberto Baron</Authors>
-    <PackageId>Topshelf.Quartz.Integration</PackageId>
-    <PackageProjectUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</PackageProjectUrl>
-    <PackageTags>Topshelf Quartz</PackageTags>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <RepositoryUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <AssemblyVersion>5.0.4.0</AssemblyVersion>
+    <IsPackable>false</IsPackable>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
@@ -24,6 +16,9 @@
     <DebugType>pdbonly</DebugType>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.3.0" />
+    <PackageReference Include="NUnit" Version="3.12.0" />
+    <PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
     <PackageReference Include="Quartz" Version="3.0.0" />
     <PackageReference Include="Topshelf" Version="4.1.0" />
   </ItemGroup>
@@ -34,5 +29,10 @@
     <Reference Include="System.ServiceProcess" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Topshelf.Common.Tests\Topshelf.Common.Tests.csproj" />
+    <ProjectReference Include="..\Topshelf.Quartz\Topshelf.Quartz.csproj" />
+    <ProjectReference Include="..\Topshelf.Quartz.Extensions\Topshelf.Quartz.Extensions.csproj" />
   </ItemGroup>
 </Project>
