--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -29,6 +29,12 @@ steps:
     custom: 'pack'
     arguments: '--output $(Build.ArtifactStagingDirectory) /p:Configuration=Release --verbosity Detailed --include-symbols -p:SymbolPackageFormat=snupkg'
 
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
+
 - task: DotNetCoreCLI@2
   inputs:
     command: 'push'
