--- a/Source/Topshelf.Quartz.Ninject/Topshelf.Quartz.Ninject.csproj
+++ b/Source/Topshelf.Quartz.Ninject/Topshelf.Quartz.Ninject.csproj
@@ -16,12 +16,14 @@
     <RepositoryUrl>https://github.com/bertuko/TopShelf.Quartz.Ninject</RepositoryUrl>
     <RepositoryType>git</RepositoryType>
     <AssemblyVersion>5.0.5.0</AssemblyVersion>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugType>full</DebugType>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
+    <DebugType>portable</DebugType>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Ninject" Version="3.3.0" />
